fix overlap on mobile view-home

--- a/huntercssa/src/components/style/HomePageStyle.css
+++ b/huntercssa/src/components/style/HomePageStyle.css
@@ -13,7 +13,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    z-index: -1;
+    z-index: -2;
 
 
     @media (max-width: 800px) {
@@ -27,6 +27,7 @@
     display: flex;
     margin-left: 14%;
     position: relative;
+    z-index: -1;
 
     @media (max-width: 1000px) {
         justify-content: center;
@@ -105,7 +106,7 @@ h4 {
     }
   }
 
-  li{
+  .slogen-home li{
     padding-left: 2rem;
 
     
